fixes css alignment issues on dashboard

--- a/public/css/sass/pages/_dashboard.scss
+++ b/public/css/sass/pages/_dashboard.scss
@@ -27,10 +27,10 @@
     }
 
     img {
-        height: 200px;
+        height: 220px;
         object-fit: cover;
         object-position: center;
-        width: 200px;
+        width: 220px;
     }
 
     h2 {
@@ -50,7 +50,7 @@
         @include box-shadow(1px 2px 10px -1px rgba(0,0,0,0.25));
         display: inline-block;
         letter-spacing: 2px;
-        margin: 10px 0 30px 20px;
+        margin: 10px 10px 30px 0px;
         padding: 8px 17px;
     }
 
@@ -58,6 +58,29 @@
 
 .dashboard-assignment:hover {
     @include transform(scale(1.01));
+}
+
+@media (max-width: 1030px) {
+
+    .dashboard-assignment {
+
+        h2 {
+            font-size: 20px;
+            padding-bottom: 5px;
+        }
+
+        p {
+            font-size: 14px;
+            padding-bottom: 5px;
+            padding-top: 5px;
+        }
+
+        .tag {
+            font-size: 14px;
+            margin-bottom: 35px;
+            margin-top: 5px;
+        }
+    }
 }
 
 @media (max-width: 880px) {
